<resources>
    <string name="lawsuits_sharedPreferences_path">lawsuits</string>
    <string name="app_name">לא רוצה הלוואה</string>
    <string name="output_folder_name">lawsuits</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="toolbar_title_mainActivity_text">בדיקת הודעות</string>
    <string name="toolbar_title_lawsuitForm_text">פרטי התביעה</string>
    <string name="toolbar_title_lawsuitSummary_text">הגשת תביעה</string>
    <string name="title_about">אודות</string>
    <string name="title_termsOfUsage">תנאי שימוש</string>
    <string name="title_summary">סיכום סטטוס</string>
    <string name="content_summary">סה\"כ \u0020\u0020\u0020\u0020 הודעות</string>
    <string name="list_item_from">מאת: %1$s</string>
    <string name="list_item_date">ב: %1$d ב%2$s %3$d</string>
    <string name="list_item_body">גוף ההודעה:\n\"%1$s\"</string>
    <string name="about_information">אפליקציית NoLoan פותחה ע\"י מתנדבי הסדנא לידע ציבורי.\n\nהאפליקציה מאפשרת לראות סמסים שהתקבלו במכשיר שמשתמשים אחרים סימנו כספאם, ועוזרת למשתמשים ליצור ולהגיש כתב תביעה לפי "חוק ספאם".\n</string>
    <string name="list_item_button_createLawsuit_text">יצירת כתב תביעה</string>
    <string name="list_item_button_addSpam_text">העלאה למאגר</string>
    <string name="list_item_button_removeSpam_text">הסרה מהמאגר</string>
    <string name="list_item_textView_spam_counter">%1$d סימנו כ-spam</string>
    <string name="inboxFragment_title">כל ההודעות (%1$d)</string>
    <string name="spamFragment_title">ספאם (%1$d)</string>
    <string name="formFragment_title_text">פרטי התביעה</string>
    <string name="formFragment_personalDetails_title_text">פרטים אישיים</string>
    <string name="formFragment_firstName_hint">שם פרטי</string>
    <string name="formFragment_lastName_hint">שם משפחה</string>
    <string name="formFragment_userId_hint">ת\"ז</string>
    <string name="formFragment_address_hint">כתובת</string>
    <string name="formFragment_phoneNumber_hint">מספר טלפון</string>
    <string name="formFragment_faxNumber_hint">מספר פקס</string>
    <string name="formFragment_companyName_hint">שם החברה</string>
    <string name="formFragment_companyId_hint">מספר ח\"פ</string>
    <string name="formFragment_fiveLawsuits_hint">מעל 5 תביעות בשנה האחרונות</string>
    <string name="formFragment_claimAmount_hint">סכום תביעה</string>
    <string name="formFragment_sentHaser_hint">נשלח הסר</string>
    <string name="formFragment_spamDate_hint">תאריך קבלת הודעה</string>
    <string name="formFragment_companyDetails_title_text">פרטי החברה</string>
    <string name="formFragment_claimDetails_title_text">פרטי התביעה</string>
    <string name="formFragment_button_chooseCourt_text">בחירת בית משפט</string>
    <string name="formFragment_button_next_text">המשך ליצירת קובץ תביעה</string>
    <string name="formFragment_claimValue_explanation_text">* בגין כל הודעה תוכלו לתבוע סכום של עד 1,000 ש"ח</string>
    <string name="formFragment_searchCorporations">איתור פרטי החברה</string>
    <string name="formFragment_searchCorporations_website">https://ica.justice.gov.il/GenericCorporarionInfo/SearchCorporation?unit=8</string>
    <string name="summaryFragment_toolbar_title_text">הגשת תביעה</string>
    <string name="summaryFragment_fileParagraph_title_text">קובץ התביעה נוצר בהצלחה</string>
    <string name="summaryFragment_fileParagraph_viewButton_text">לצפיה בקובץ</string>
    <string name="summaryFragment_alertDialog_viewTitle">צפייה בכתב התביעה</string>
    <string name="summaryFragment_alertDialog_shareTitle">שיתוף כתב תביעה</string>
    <string name="summaryFragment_claimOnline_title_text">הגשה מקוונת</string>
    <string name="summaryFragment_claimOnline_onlineExplanation_text">הגשה מקוונת מתבצעת דרך אתר הרשות השופטת \"נט המשפט\" וללא עלות נוספת למעט האגרה המשולמת בגין הגשת תביעה קטנה.</string>
    <string name="summaryFragment_claimOnline_authExplanation_text">יש להזדהות בעזרת 2 מבין שלושת אמצעי הזיהוי הבאים: תעודת זהות/דרכון ישראלי/כרטיס אשראי.</string>
    <string name="summaryFragment_claimOnline_paymentExplanation_text">אגרה: 50 ש״ח עבור תביעה של עד 5,000 ש״ח</string>
    <string name="summaryFragment_claimOnline_button_toWebSite_text">כניסה</string>
    <string name="summaryFragment_claimFaxAddress_title_text">הגשה בדואר / בפקס</string>
    <string name="summaryFragment_button_chooseCourt_text">בחירת בית משפט</string>
    <string name="app_emailAddress"><u>noloan.app@gmail.com</u></string>
    <string name="termsOfUsage_title">תנאי שימוש באפליקציה</string>
    <string name="termsOfUsage_content_general">1.1. עמותת הסדנא לידע ציבורי (להלן “העמותה“), מפעילה אפליקציה שנועדה לצמצם את תופעת ספאם סמסים.\n
1.2. הוראות תקנון זה יחולו על כל התחברות ו/או גלישה באפליקציה, על ידי המשתמשים, ועשויות להשתנות מעת לעת, על פי שיקול דעתה הבלעדי של העמותה. אשר על כן, טרם ביצוע פעולה כלשהי באפליקציה, מתבקש המשתמש לקרוא, בעיון רב, את תנאי השימוש אילו.\n
1.3. העמותה שומרת לעצמה את הזכות לשנות, למחוק ו/או להוסיף על תנאי שימוש אלו בכל עת וללא התחייבות למתן הודעה מוקדמת ו/או בדיעבד. כל תוספת ו/או שינוי שנעשה בתנאים אלו יחייבו את המשתמש עם המשך שימושו באפליקציה. שימוש המשתמש באפליקציה לאחר ביצוע השינויים מעיד על הסכמתו לשינויים אלו. ככל והמשתמש אינו מסכים לשינויים ו/או לתנאי השימוש, עליו להימנע מהמשך השימוש באפליקציה.\n
1.4. תוקף תנאי השימוש הינו מצטבר ולא לחילופין ותנאי השימוש יפורשו כמתקיימים זה לצד זה ולא מצמצמים זה את תחולת זה.\n
1.5. שימוש באפליקציה מהווה אישור כי המשתמש קרא את הוראות תנאי השימוש וכן כי הוא מסכים להוראות תנאי השימוש, וכן מסכים לפעול לפיהם ולקבלם במלואם ללא כל הגבלה או הסתייגות.\n
1.6. מובהר בזאת, כי השימוש בלשון זכר בתנאי השימוש, נעשה מטעמי נוחות בלבד ואין בו כדי לפגוע ו/או ליצור אפליה כלשהי.\n
1.7. המשתמש רשאי לעשות שימוש באפליקציה לצרכים אישיים ובלתי מסחריים בלבד. חל איסור לעשות באפליקציה שימוש למטרה שאיננה לצורך אישי או בלתי מסחרי.\n
1.8. כל שימוש באפליקציה יתבצע על אחריותו הבלעדית של המשתמש. למשתמש לא תהיה כל טענה ו/או תביעה כנגד העמותה בקשר לאפליקציה ו/או שימושו בה ו/או שימושו של צד שלישי, בגין כל נזק ישיר או עקיף, הנובע משימוש ו/או בשל הסתמכות על תוכן של צד שלישי ו/או בשל פגיעה בפרטיות ו/או פגיעה אחרת בעקבות שימוש כאמור.\n
1.9. המשתמש אחראי באופן בלעדי לספק את החומרה הנדרשת, אשר באמצעותה תתבצע הגישה לאפליקציה.
    </string>
    <string name="termsOfusage_title_general_secondParagraph">הגבלת אחריות</string>
    <string name="termsOfUsage_content_general_secondParagraph">
2.1. העמותה עושה מאמצים כדי לספק למשתמש חווית שימוש איכותית ובטוחה בגלישה באפליקציה. עם זאת, האפליקציה אינה חסינה מתקלות ו/או בעיות.\n
2.2. העמותה לא תישא בכל אחריות שהיא, מפורשת או משתמעת בקשר עם האפליקציה, וכן בקשר עם התאמתה למטרה ספציפית ו/או לדרישות המשתמש. המשתמש מצהיר ומתחייב בזה, כי הוא אחראי באופן בלעדי ומלא לכל שימוש שהוא עושה באפליקציה, וכי ידוע לו שהעמותה אינה אחראית, בין במישרין בין בעקיפין, לכל שימוש שהוא עושה באפליקציה כאמור.\n
2.3. האפליקציה, על כל שירותיה, מוצעת למשתמש כמות שהיא (‘As Is’).\n
2.4. העמותה ו/או מי מטעמה, לא יישאו בכל אחריות שהיא, לנזק ו/או אובדן, ישיר או עקיף, לרבות נזק נלווה, תוצאתי, אקראי או פיצויים עונשיים (ובכלל זה, ומבלי לגרוע מכלליות האמור, פיצויים בגין הפסד עבודה ועסקים, הפסד רווחים, הפסקות והפרעות עבודה, הפסד ו/או איבוד מידע עסקי, פגיעה במוניטין, וכל הפסד ו/או נזק כספי אחר, צפוי ושאינו צפוי), הנובעים ו/או הקשורים, באפליקציה, או בכל שימוש בה, ולרבות אך מבלי לגרוע:\n
2.4.1. בשימוש ו/או אי יכולת שימוש באפליקציה, לרבות כל שירות בה, מכל סיבה שהיא;\n
2.4.2. הודעות ו/או קבצים ו/או תוכן שנתקבלו אצל המשתמש במהלך ו/או עקב השימוש באפליקציה;\n
2.4.3. כל מעשה ו/או מחדל המתבצע באמצעות האפליקציה;\n
2.4.4. הפרעות, זמינות ותקינות של האפליקציה, לרבות כל שירות בה, מכל סיבה שהיא, ולרבות, הנובעים משיבושים או מכשלים ברשת התקשורת והאינטרנט או ברשת הטלפוניה;\n
2.5. העמותה אינה אחראית לכל פעילות בלתי חוקית שתתבצע, ככל שתתבצע, על ידי מי מהמשתמשים באפליקציה ו/או כל גורם אחר ברשת האינטרנט שאין לה שליטה עליו.\n
2.6. העמותה אינה אחראית בשום דרך למידע לו המשתמש נחשף ו/או מקבל ו/או שולח דרך האפליקציה.\n
2.7. העמותה אינה אחראית לכל התחייבות ו/או פעולה אותה מבצע המשתמש באמצעות האפליקציה.\n
2.8. אין בהגבלת האחריות בסעיף ‏זה, בכדי לגרוע מכל הגבלת אחריות אחרת המפורטת בתנאי השימוש.
    </string>
    <string name="termsOfUsage_title_forbiddenUsage">שימושים אסורים באפליקציה</string>
    <string name="termsOfUsage_content_forbiddenUsage">3.1. המשתמש אינו רשאי לבצע את הפעולות ו/או המעשים הבאים בעת שימושו באפליקציה:\n
3.1.1. לעשות שימוש מסחרי באפליקציה ו/או באמצעותה.\n
3.1.2. לשבש או להפר כל זכות של משתמש אחר באפליקציה ו/או ברשת האינטרנט, לרבות הזכות לפרטיות ו/או לאסוף מידע אישי על המשתמשים באפליקציה, לרבות באמצעים אוטומטיים.\n
3.1.3. לפגוע בכבודו או בפרטיותו של משתמש אחר ו/או להשתמש באפליקציה כדי לפגוע בשמו הטוב של כל אדם ו/או לפרסם דברי הסתה, הונאה, תרמית, לשון הרע ו/או כל מידע אחר שהינו שקרי, בלתי אמין או שיש בו כדי לפגוע במזיד.\n
3.1.4. לעשות שימוש ברשת האלחוטית כדי לפגוע בכל אדם ו/או חברה, בכל דרך.\n
3.2. אי עמידה במגבלות אלו עלולה להוביל למניעת גישת המשתמש לאפליקציה על ידי העמותה ואף לחשוף אותו לאחריות אזרחית ו/או פלילית, על-פי כל דין.
    </string>
    <string name="termsOfUsage_title_entitledUsers">הזכאים להשתמש באפליקציה</string>
    <string name="termsOfUsage_content_entitledUsers">4.1. כל אדם כדאי להשתמש אפליקציה בהתאם לתנאי השימוש ומדיניות העמותה\n
4.1.2. למען הסר ספק מובהר כי לעמותה נתונה הרשות בכל עת ועל פי שיקול דעתה הבלעדי למנוע ממשתמשים את הגישה לאפליקציה, היה והתנהגותם אינה הולמת ו/או היה והם מבצעים שימוש בלתי ראוי או בלתי סביר באפליקציה, לרבות אי ציות לתנאי השימוש.\n
4.2. יחד עם זאת, העמותה רשאית להתיר או לאסור את גישת המשתמש לאפליקציה בכל זמן, על פי שיקול דעתה הבלעדי ומכל סיבה שהיא, ושומרת לעצמה את הזכות הבלעדית לשנות או להפסיק את הפעלת האפליקציה, כולה או חלקה, בכל זמן וללא מתן הודעה ומבלי שתהיה למשתמש כל טענה, זכות ו/או תביעה בקשר לכך.\n
4.3. העמותה תהיה רשאית להתנות את הכניסה ו/או השימוש באפליקציה, כולה או חלקה, ברישום ו/או בתשלום, ומבלי שתהיה למשתמש כל טענה, זכות ו/או תביעה בקשר לכך.
    </string>
    <string name="termsOfUsage_title_infoSecurity">אבטחת מידע</string>
    <string name="termsOfUsage_content_infoSecurity">5.1. העמותה נוקטת באמצעים סבירים ונעזרת באמצעי אבטחה טכנולוגיים וארגוניים כדי לאבטח את האפליקציה, כנגד ניצול מקרי או מכוון, אובדן, הרס או כנגד גישה על ידי אנשים בלתי מוסמכים או מורשים. עם זאת העמותה מבהירה, כי במקרים שאינם בשליטתה ו/או נובעים מכוח עליון, היא איננה מתחייבת, שהאפליקציה תתנהל כסדרה, ללא כל הפרעה, ו/או שהנתונים שנשלחו והתקבלו באמצעות האפליקציה יהיו חסינים באופן מוחלט מפני גישה ו/או חדירה בלתי מורשית לאפליקציה וכי ידוע למשתמש שהעמותה לא תישא באחריות בגין כל נזק ו/או אובדן, ישירים או עקיפים, מכל סוג שהוא, שנגרמו כתוצאה מכך, לרבות בשל פגיעה בפרטיות.\n
5.2. יודגש, על המשתמש חלה האחריות לנקוט בכל האמצעים על מנת להגן על החומרה ו/או התוכנה ו/או המידע המצוי במכשיר ממנו נעשית הגישה לאפליקציה, בעת השימוש והחיבור לאפליקציה וכי בעצם השימוש באפליקציה המשתמש מסיר מהעמותה אחריות לכל נזק שעשוי להיגרם למשתמש מעצם החיבור לאפליקציה.
    </string>
    <string name="termsOfUsage_title_compensationTermsConditions">ציות לתנאים ושיפוי</string>
    <string name="termsOfUsage_content_compensationTermsConditions">6.1. המשתמש מתחייב בזאת לציית לכל הוראות הדין, לרבות חוק ו/או תקנה, העשויים לחול על שימושו באפליקציה, לרבות תנאי שימוש אלו.\n
6.2. כמו כן, המשתמש מתחייב לשפות את העמותה ו/או מי מטעמה בגין כל נזק, הפסד, אובדן רווח, תשלום או הוצאה שיגרמו להם, במישרין או בעקיפין, ובכלל זה פגיעה במוניטין, פגיעה כלכלית ו/או מסחרית, שכ”ט עו”ד והוצאות משפט בגין כל טענה, דרישה ו/או תביעה הנובעים, במישרין ו/או בעקיפין, מהפרת תנאי השימוש ו/או כל ממעשה ו/או מחדל של המשתמש ו/או מכל חיוב בו תחויב העמותה ו/או מי מטעמה אשר על פי תנאי השימוש לעמותה אין אחריות לגביו; או שתועלה נגדם על ידי צד שלישי כלשהו כתוצאה משימוש פסול ו/או בלתי חוקי על ידי המשתמש באפליקציה, לרבות הפרת תנאים אלו.
    </string>
    <string name="termsOfUsage_title_contact">יצירת קשר</string>
    <string name="termsOfUsage_content_contact">בכל עניין, שאלה ו/או בקשה, אנא פנו אל העמותה במייל</string>
    <string name="termsOfUsage_email">info@hasadna.org.il</string>
</resources>