<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".TermsOfUsageActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <include
            android:id="@+id/toolbar_content"
            layout="@layout/toolbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <ScrollView
            android:id="@+id/scroll_view"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:fillViewport="true">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="12dp"
                android:gravity="right"
                android:orientation="vertical"
                android:paddingBottom="35dp">

                <TextView
                    android:id="@+id/textView_termsOfUsage_title"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="15dp"
                    android:layout_marginBottom="10dp"
                    android:text="תנאי שימוש באפליקציה"
                    android:textSize="21sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/textView_generalParagraph_title"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="כללי"
                    android:textSize="18sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/textView_generalParagraph_content"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/termsOfUsage_content_general" />

                <TextView
                    android:id="@+id/textView_secondParagraph_title"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:text="@string/termsOfusage_title_general_secondParagraph"
                    android:textSize="16sp" />

                <TextView
                    android:id="@+id/textView_secondParagraph_content"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/termsOfUsage_content_general_secondParagraph" />

                <TextView
                    android:id="@+id/textView_forbiddenUsage_title"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="15dp"
                    android:layout_marginBottom="5dp"
                    android:text="@string/termsOfUsage_title_forbiddenUsage"
                    android:textSize="18sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/textView_forbiddenusage_content"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/termsOfUsage_content_forbiddenUsage" />

                <TextView
                    android:id="@+id/textView_entitledUsers_title"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="15dp"
                    android:layout_marginBottom="5dp"
                    android:text="@string/termsOfUsage_title_entitledUsers"
                    android:textSize="18sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/textView_entitledUsers_content"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/termsOfUsage_content_entitledUsers" />

                <TextView
                    android:id="@+id/textView_infoSecurity_title"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="15dp"
                    android:layout_marginBottom="5dp"
                    android:text="@string/termsOfUsage_title_infoSecurity"
                    android:textSize="18sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/textView_infoSecurity_content"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/termsOfUsage_content_infoSecurity" />

                <TextView
                    android:id="@+id/textView_compensation_title"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="15dp"
                    android:layout_marginBottom="5dp"
                    android:text="@string/termsOfUsage_title_compensationTermsConditions"
                    android:textSize="18sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/textView_compensation_content"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/termsOfUsage_content_compensationTermsConditions" />

                <TextView
                    android:id="@+id/textView_contact_title"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="15dp"
                    android:layout_marginBottom="5dp"
                    android:text="@string/termsOfUsage_title_contact"
                    android:textSize="18sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/textView_contact_content"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/termsOfUsage_content_contact" />

                <TextView
                    android:id="@+id/textView_contact_email"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/termsOfUsage_email"
                    android:textColor="@color/colorAccent" />
            </LinearLayout>
        </ScrollView>

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>
