<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LawsuitFormFragment">


    <LinearLayout
        android:id="@+id/LinearLayout_formFragmentContainer"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginHorizontal="5dp"
        android:orientation="vertical">

        <TextView
            android:id="@+id/TextView_formTitle"
            style="@style/LawsuitFragmentTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/formFragment_title_text" />
        <!--
        <TextView
            android:id="@+id/textView_firstFragment_description"
            style="@style/LawsuitFragmentDescription"
            android:text="@string/firstFragment_description_text" />-->

        <ScrollView
            android:id="@+id/ScrollView_formFragment"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginBottom="8dp">

            <LinearLayout
                android:id="@+id/LinearLayout_formContainer"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginBottom="20dp"
                android:orientation="vertical"
                android:textAlignment="center">

                <LinearLayout
                    android:id="@+id/LinearLayout_userDetails"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginVertical="5dp"
                    android:gravity="right"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/TextView_userDetails_title"
                        style="@style/LawsuitFormFragmentSubTitle"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="פרטים אישיים" />

                    <EditText
                        android:id="@+id/userPrivateName"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:ems="10"
                        android:hint="@string/formFragment_privateName_hint"
                        android:inputType="textPersonName" />

                    <EditText
                        android:id="@+id/userLastName"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:ems="10"
                        android:hint="@string/formFragment_lastName_hint"
                        android:inputType="textPersonName" />

                    <EditText
                        android:id="@+id/userID"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:ems="10"
                        android:hint="@string/formFragment_userId_hint"
                        android:inputType="number" />

                    <EditText
                        android:id="@+id/userAddress"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:ems="10"
                        android:hint="@string/formFragment_address_hint"
                        android:inputType="textPersonName" />

                    <EditText
                        android:id="@+id/userPhone"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:ems="10"
                        android:gravity="right"
                        android:hint="@string/formFragment_phoneNumber_hint"
                        android:inputType="phone" />

                    <EditText
                        android:id="@+id/userFax"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:ems="10"
                        android:gravity="right"
                        android:hint="@string/formFragment_faxNumber_hint"
                        android:inputType="phone" />

                </LinearLayout>

                <LinearLayout
                    android:id="@+id/LinearLayout_companyDetails"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginVertical="15dp"
                    android:gravity="right"
                    android:orientation="vertical"
                    tools:layout_editor_absoluteX="8dp"
                    tools:layout_editor_absoluteY="667dp">

                    <TextView
                        android:id="@+id/TextView_companyDetails_title"
                        style="@style/LawsuitFormFragmentSubTitle"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/formFragment_companyDetails_title_text" />

                    <EditText
                        android:id="@+id/EditText_companyName"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:ems="10"
                        android:hint="@string/formFragment_companyName_hint"
                        android:inputType="textPersonName" />

                    <EditText
                        android:id="@+id/EditText_companyId"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:ems="10"
                        android:hint="@string/formFragment_companyId_hint"
                        android:inputType="number" />

                    <EditText
                        android:id="@+id/EditText_companyAddress"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:ems="10"
                        android:hint="@string/formFragment_address_hint"
                        android:inputType="textPersonName" />

                    <EditText
                        android:id="@+id/EditText_companyPhone"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:ems="10"
                        android:gravity="right"
                        android:hint="@string/formFragment_phoneNumber_hint"
                        android:inputType="phone" />

                    <EditText
                        android:id="@+id/EditText_companyFax"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:ems="10"
                        android:gravity="right"
                        android:hint="@string/formFragment_faxNumber_hint"
                        android:inputType="phone" />

                </LinearLayout>

                <LinearLayout
                    android:id="@+id/LinearLayout_claimDetails"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="right"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/TextView_claimDetails_title"
                        style="@style/LawsuitFormFragmentSubTitle"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/formFragment_claimDetails_title_text"
                        tools:layout_editor_absoluteX="8dp"
                        tools:layout_editor_absoluteY="8dp" />

                    <EditText
                        android:id="@+id/EditText_receivedSpamDate"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:ems="10"
                        android:focusable="false"
                        android:hint="@string/formFragment_spamDate_hint"
                        android:inputType="date" />

                    <EditText
                        android:id="@+id/EditText_claimAmount"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:ems="10"
                        android:gravity="right"
                        android:hint="@string/formFragment_claimAmount_hint"
                        android:inputType="number|textCapWords"
                        android:text="1000" />

                    <TextView
                        android:id="@+id/textView"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/formFragment_claimValue_explanation_text" />

                    <CheckBox
                        android:id="@+id/checkBox_sentHaser"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layoutDirection="rtl"
                        android:text="@string/formFragment_sentHaser_hint" />

                    <CheckBox
                        android:id="@+id/checkbox_fiveLawsuits"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layoutDirection="rtl"
                        android:text="@string/formFragment_fiveLawsuits_hint" />

                    <TextView
                        android:id="@+id/textView_selectCourt_FormFragment"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_marginVertical="8dp"
                        android:text="@string/formFragment_button_chooseCourt_text"
                        android:textColor="@color/colorPrimary"
                        android:textSize="17dp" />

                </LinearLayout>

                <Button
                    android:id="@+id/button_formFragment_next"
                    style="@style/DefaultButton"
                    android:layout_width="wrap_content"
                    android:layout_height="32dp"
                    android:layout_gravity="center"
                    android:layout_margin="10dp"
                    android:text="@string/formFragment_button_next_text"

                    tools:layout_editor_absoluteX="8dp"
                    tools:layout_editor_absoluteY="652dp" />


            </LinearLayout>
        </ScrollView>



    </LinearLayout>

</FrameLayout>